--- a/templates/gedocumentos_ingresos_list.htm
+++ b/templates/gedocumentos_ingresos_list.htm
@@ -680,12 +680,7 @@
 	class=" r-ori-vert			col-md-12
 	
 ">
-		 
-		{BEGIN mastertable_block}
-<div data-itemtype="master_info" data-itemid="master_info" {$item_master_info} data-pageid="{$pageid}">
-	{$showmasterfile}
-</div>
-{END mastertable_block}		</div>					</div>
+			</div>					</div>
 			</div>		
 {END top_block}
 						</div>
@@ -710,14 +705,6 @@
 							Nuevo documento			</a>
 </span>
 {END add_link}
-	 
-		{BEGIN inlineadd_link}
-<span data-itemtype="inline_add" data-itemid="inline_add" {$item_inline_add} data-pageid="{$pageid}" data-small data-button-item>
-	<a type="button" title="" class="btn btn-primary   
-	" {$inlineaddlink_attrs} >
-							Añadir nuevo			</a>
-</span>
-{END inlineadd_link}
 	 
 		{BEGIN deleteselected_link}
 <span data-itemtype="delete" data-itemid="delete" {$item_delete} data-pageid="{$pageid}" data-page="gedocumentos_ingresos_list" data-small data-button-item>
@@ -1319,15 +1306,6 @@
 </span>
 {END edit_link}
 {END edit_column}
-	 
-		{BEGIN inline_cancel}
-<span data-itemtype="grid_inline_cancel" data-itemid="grid_inline_cancel" {$item_grid_inline_cancel} data-pageid="{$pageid}" data-record-id="{$recId}" data-small data-button-item>
-	<a type="button" title="Cancelar" class="btn-link   
-	 glyphicon glyphicon-remove" {$inlinerevertlink_attrs} title="Cancelar" >		
-				
-								</a>
-</span>
-{END inline_cancel}
 	 
 		{BEGIN view_column}
 {BEGIN view_link}
