--- a/templates/gedocumentos_egresos_consumo_masterlist.htm
+++ b/templates/gedocumentos_egresos_consumo_masterlist.htm
@@ -91,7 +91,7 @@
 	 
 		{BEGIN doclasedoc_id_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field1" {$item_simple_grid_field1} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc_id" data-fieldname="doclasedoc_id" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc_id" data-fieldname="doclasedoc_id" 
 
 	
 	
@@ -151,7 +151,7 @@
 	 
 		{BEGIN do_fechadoc_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field5" {$item_simple_grid_field5} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_fechadoc" data-fieldname="do_fechadoc" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_fechadoc" data-fieldname="do_fechadoc" 
 
 	
 	
@@ -181,7 +181,7 @@
 	 
 		{BEGIN docodregion_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docodregion" data-fieldname="docodregion" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docodregion" data-fieldname="docodregion" 
 
 	
 	
@@ -211,7 +211,7 @@
 	 
 		{BEGIN do_detalle_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_detalle" data-fieldname="do_detalle" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_detalle" data-fieldname="do_detalle" 
 
 	
 	
@@ -241,7 +241,7 @@
 	 
 		{BEGIN do_tipomov_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_tipomov" data-fieldname="do_tipomov" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_tipomov" data-fieldname="do_tipomov" 
 
 	
 	
@@ -271,7 +271,7 @@
 	 
 		{BEGIN doclasedoc_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc" data-fieldname="doclasedoc" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc" data-fieldname="doclasedoc" 
 
 	
 	
@@ -301,7 +301,7 @@
 	 
 		{BEGIN docnomproveedor_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docnomproveedor" data-fieldname="docnomproveedor" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docnomproveedor" data-fieldname="docnomproveedor" 
 
 	
 	
@@ -321,47 +321,17 @@
 	{$cell_grid_headcell_field8}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
+		 r-ori-vert		 {$do_concepto_class}	"
 
-			data-field="do_depsup"
+			data-field="do_concepto"
 	
 	data-cellId="grid_headcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_depsup_fieldheadercolumn}
-<span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_depsup" data-fieldname="do_depsup" 
-
-	
-	
-	>
-	<span class="text-label">
-		<span>{$label gedocumentos_egresos_consumo do_depsup }</span>
-			</span>
-	</span>
-{END do_depsup_fieldheadercolumn}
-
-	
-	</th>
-	{END cellblock_grid_headcell_field8}
-									{BEGIN cellblock_grid_headcell_field9}
-	<th
-	
-	{$cell_grid_headcell_field9}
-	{$recordattrs}
-	class="
-		 r-ori-vert		 {$do_concepto_class}	"
-
-			data-field="do_concepto"
-	
-	data-cellId="grid_headcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
-	>
-
-	 
 		{BEGIN do_concepto_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_concepto" data-fieldname="do_concepto" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_concepto" data-fieldname="do_concepto" 
 
 	
 	
@@ -374,6 +344,36 @@
 
 	
 	</th>
+	{END cellblock_grid_headcell_field8}
+									{BEGIN cellblock_grid_headcell_field9}
+	<th
+	
+	{$cell_grid_headcell_field9}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$resolfecha_class}	"
+
+			data-field="resolfecha"
+	
+	data-cellId="grid_headcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN resolfecha_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label gedocumentos_egresos_consumo resolfecha }</span>
+			</span>
+	</span>
+{END resolfecha_fieldheadercolumn}
+
+	
+	</th>
 	{END cellblock_grid_headcell_field9}
 									{BEGIN cellblock_grid_headcell_field10}
 	<th
@@ -381,26 +381,26 @@
 	{$cell_grid_headcell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
-			data-field="do_dep"
+			data-field="resolnum"
 	
 	data-cellId="grid_headcell_field10" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_dep_fieldheadercolumn}
+		{BEGIN resolnum_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_dep" data-fieldname="do_dep" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" 
 
 	
 	
 	>
 	<span class="text-label">
-		<span>{$label gedocumentos_egresos_consumo do_dep }</span>
+		<span>{$label gedocumentos_egresos_consumo resolnum }</span>
 			</span>
 	</span>
-{END do_dep_fieldheadercolumn}
+{END resolnum_fieldheadercolumn}
 
 	
 	</th>
@@ -615,32 +615,11 @@
 	{$cell_grid_cell_field8}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
-
-			data-field="do_depsup"
-	
-	data-cellId="grid_cell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
-	>
-
-	 
-		{BEGIN do_depsup_fieldcolumn}
-<span data-itemtype="grid_field" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_depsup" data-fieldname="do_depsup" data-default-width >
-{$do_depsup_value}
-</span>
-{END do_depsup_fieldcolumn}	
-	</td>
-	{END cellblock_grid_cell_field8}
-									{BEGIN cellblock_grid_cell_field9}
-	<td
-	
-	{$cell_grid_cell_field9}
-	{$recordattrs}
-	class="
 		 r-ori-vert		 {$do_concepto_class}	"
 
 			data-field="do_concepto"
 	
-	data-cellId="grid_cell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	data-cellId="grid_cell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
@@ -650,6 +629,27 @@
 </span>
 {END do_concepto_fieldcolumn}	
 	</td>
+	{END cellblock_grid_cell_field8}
+									{BEGIN cellblock_grid_cell_field9}
+	<td
+	
+	{$cell_grid_cell_field9}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$resolfecha_class}	"
+
+			data-field="resolfecha"
+	
+	data-cellId="grid_cell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN resolfecha_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field1" {$item_simple_grid_field1} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" data-default-width >
+{$resolfecha_value}
+</span>
+{END resolfecha_fieldcolumn}	
+	</td>
 	{END cellblock_grid_cell_field9}
 									{BEGIN cellblock_grid_cell_field10}
 	<td
@@ -657,19 +657,19 @@
 	{$cell_grid_cell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
-			data-field="do_dep"
+			data-field="resolnum"
 	
 	data-cellId="grid_cell_field10" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_dep_fieldcolumn}
-<span data-itemtype="grid_field" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_dep" data-fieldname="do_dep" data-default-width >
-{$do_dep_value}
+		{BEGIN resolnum_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field5" {$item_simple_grid_field5} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" data-default-width >
+{$resolnum_value}
 </span>
-{END do_dep_fieldcolumn}	
+{END resolnum_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field10}
 							</tr>
@@ -824,7 +824,7 @@
 	{$cell_grid_footcell_field8}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
+		 r-ori-vert		 {$do_concepto_class}	"
 
 	
 	data-cellId="grid_footcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_masterlist"	
@@ -839,7 +839,7 @@
 	{$cell_grid_footcell_field9}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_concepto_class}	"
+		 r-ori-vert		 {$resolfecha_class}	"
 
 	
 	data-cellId="grid_footcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_masterlist"	
@@ -854,7 +854,7 @@
 	{$cell_grid_footcell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
 	
 	data-cellId="grid_footcell_field10" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_masterlist"	
