--- a/styles/pages/gedocumentos_egresos_consumo_list.css
+++ b/styles/pages/gedocumentos_egresos_consumo_list.css
@@ -22,12 +22,6 @@
 [data-cellid="grid_footcell_field8"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field8"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field8"][data-page="gedocumentos_egresos_consumo_list"] {
   white-space: nowrap;
 }
-[data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"] {
-  white-space: nowrap;
-}
-[data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_list"] {
-  white-space: nowrap;
-}
 [data-cellid="grid_headcell_checkbox"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_headcell_checkbox"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_headcell_checkbox"][data-page="gedocumentos_egresos_consumo_list"] {
   width: 30px;
 }
@@ -38,6 +32,12 @@
   white-space: nowrap;
 }
 [data-cellid="grid_cell_details"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_cell_details"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_cell_details"][data-page="gedocumentos_egresos_consumo_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field"][data-page="gedocumentos_egresos_consumo_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"] {
   white-space: nowrap;
 }
 [data-page="gedocumentos_egresos_consumo_list"][data-itemid="add"] > .btn {
