--- a/styles/pages/gedocumentos_ingresos_consumo_list.css
+++ b/styles/pages/gedocumentos_ingresos_consumo_list.css
@@ -40,6 +40,12 @@
 [data-cellid="grid_cell_details"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_cell_details"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_cell_details"][data-page="gedocumentos_ingresos_consumo_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"] {
+  white-space: nowrap;
+}
 [data-page="gedocumentos_ingresos_consumo_list"][data-itemid="add"] > .btn {
   font-family: "Roboto";
 }
