--- a/styles/pages/gedocumentos_ingresos_consumo_masterprint.css
+++ b/styles/pages/gedocumentos_ingresos_consumo_masterprint.css
@@ -31,6 +31,12 @@
 [data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
+  white-space: nowrap;
+}
 [data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
   width: 30px;
 }
