--- a/styles/pages/gedocumentos_masterlist.css
+++ b/styles/pages/gedocumentos_masterlist.css
@@ -58,6 +58,12 @@
 [data-cellid="grid_footcell_field19"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field19"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field19"][data-page="gedocumentos_masterlist"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field20"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field20"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field20"][data-page="gedocumentos_masterlist"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field21"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field21"][data-page="gedocumentos_masterlist"][data-cellid="grid_footcell_field21"][data-page="gedocumentos_masterlist"] {
+  white-space: nowrap;
+}
 [data-page="gedocumentos_masterlist"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
