--- a/templates/gedocumentos_egresos_consumo_add.htm
+++ b/templates/gedocumentos_egresos_consumo_add.htm
@@ -600,6 +600,129 @@
 														<tr {$row_grid_2} >
 										
 
+{BEGIN cellblock_grid_c17}
+<td
+	{$cell_grid_c17}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c17" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolnum_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolnum}  r-vertical-field" 
+	data-signal-error-for="resolnum{$id}" {$required_attr_resolnum}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field16" {$item_integrated_edit_field16} data-pageid="{$pageid}" data-field="resolnum" data-fieldname="resolnum" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_resolnum}">
+		{BEGIN resolnum_label}{$label gedocumentos_egresos_consumo resolnum }{END resolnum_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$resolnum_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="resolnum" {$tooltipAttr gedocumentos_egresos_consumo resolnum } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo resolnum }		</div>
+	</div>
+</div>
+
+
+{END resolnum_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c17}
+			 
+																
+
+{BEGIN cellblock_grid_c18}
+<td
+	{$cell_grid_c18}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c18" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolfecha_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolfecha}  r-vertical-field" 
+	data-signal-error-for="resolfecha{$id}" {$required_attr_resolfecha}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field15" {$item_integrated_edit_field15} data-pageid="{$pageid}" data-field="resolfecha" data-fieldname="resolfecha" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_resolfecha}">
+		{BEGIN resolfecha_label}{$label gedocumentos_egresos_consumo resolfecha }{END resolfecha_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$resolfecha_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="resolfecha" {$tooltipAttr gedocumentos_egresos_consumo resolfecha } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo resolfecha }		</div>
+	</div>
+</div>
+
+
+{END resolfecha_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c18}
+			 
+																
+
+{BEGIN cellblock_grid_c19}
+<td
+	{$cell_grid_c19}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c19" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN sys_user_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" 
+	data-signal-error-for="sys_user{$id}" {$required_attr_sys_user}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_sys_user}">
+		{BEGIN sys_user_label}{$label gedocumentos_egresos_consumo sys_user }{END sys_user_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$sys_user_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="sys_user" {$tooltipAttr gedocumentos_egresos_consumo sys_user } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo sys_user }		</div>
+	</div>
+</div>
+
+
+{END sys_user_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c19}
+								</tr>
+	 
+	 
+														<tr {$row_grid_3} >
+										
+
 {BEGIN cellblock_grid_c9}
 <td
 	{$cell_grid_c9}
@@ -640,7 +763,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_3} >
+														<tr {$row_grid_4} >
 										
 
 {BEGIN cellblock_grid_c10}
@@ -763,7 +886,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_4} >
+														<tr {$row_grid_5} >
 										
 
 {BEGIN cellblock_grid_c14}
@@ -804,7 +927,8 @@
 								</td>
 			{END cellblock_grid_c14}
 			 
-																
+		
+							
 
 {BEGIN cellblock_grid_c15}
 <td
@@ -818,33 +942,11 @@
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_depsup_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_depsup}  r-vertical-field" 
-	data-signal-error-for="do_depsup{$id}" {$required_attr_do_depsup}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field13" {$item_integrated_edit_field13} data-pageid="{$pageid}" data-field="do_depsup" data-fieldname="do_depsup" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_depsup}">
-		{BEGIN do_depsup_label}{$label gedocumentos_egresos_consumo do_depsup }{END do_depsup_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_depsup_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_depsup" {$tooltipAttr gedocumentos_egresos_consumo do_depsup } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo do_depsup }		</div>
-	</div>
-</div>
-
-
-{END do_depsup_fieldblock}
-	
-								</td>
+									</td>
 			{END cellblock_grid_c15}
 			 
-																
+		
+							
 
 {BEGIN cellblock_grid_c16}
 <td
@@ -858,35 +960,12 @@
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_dep_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_dep}  r-vertical-field" 
-	data-signal-error-for="do_dep{$id}" {$required_attr_do_dep}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field12" {$item_integrated_edit_field12} data-pageid="{$pageid}" data-field="do_dep" data-fieldname="do_dep" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_dep}">
-		{BEGIN do_dep_label}{$label gedocumentos_egresos_consumo do_dep }{END do_dep_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_dep_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_dep" {$tooltipAttr gedocumentos_egresos_consumo do_dep } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo do_dep }		</div>
-	</div>
-</div>
-
-
-{END do_dep_fieldblock}
-	
-								</td>
+									</td>
 			{END cellblock_grid_c16}
 								</tr>
 	 
 	 
-														<tr {$row_grid_5} >
+														<tr {$row_grid_6} >
 										
 
 {BEGIN cellblock_grid_c13}
@@ -926,85 +1005,6 @@
 	
 								</td>
 			{END cellblock_grid_c13}
-								</tr>
-	 
-	 
-														<tr {$row_grid_6} >
-										
-
-{BEGIN cellblock_grid_c3}
-<td
-	{$cell_grid_c3}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c3" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-				
-{BEGIN sys_user_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" 
-	data-signal-error-for="sys_user{$id}" {$required_attr_sys_user}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_sys_user}">
-		{BEGIN sys_user_label}{$label gedocumentos_egresos_consumo sys_user }{END sys_user_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$sys_user_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="sys_user" {$tooltipAttr gedocumentos_egresos_consumo sys_user } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo sys_user }		</div>
-	</div>
-</div>
-
-
-{END sys_user_fieldblock}
-	
-								</td>
-			{END cellblock_grid_c3}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c4}
-<td
-	{$cell_grid_c4}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c4" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c4}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c}
-<td
-	{$cell_grid_c}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c}
 								</tr>
 			</tbody></table>
 {END grid_block}
