--- a/templates/gedocumentos_egresos_consumo_print.htm
+++ b/templates/gedocumentos_egresos_consumo_print.htm
@@ -322,66 +322,66 @@
 	
 	</th>
 	{END cellblock_grid_headcell_field6}
-									{BEGIN cellblock_grid_headcell_field7}
+									{BEGIN cellblock_grid_headcell_field9}
 	<th
 	
-	{$cell_grid_headcell_field7}
+	{$cell_grid_headcell_field9}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolfecha_class}	"
 
-			data-field="do_dep"
+			data-field="resolfecha"
 	
-	data-cellId="grid_headcell_field7" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	data-cellId="grid_headcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_dep_fieldheadercolumn}
+		{BEGIN resolfecha_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field16" {$item_simple_grid_field16} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_dep" data-fieldname="do_dep" 
+	data-itemtype="grid_field_label" data-itemid="grid_field_label" {$item_grid_field_label} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" 
 
 	
 	
 	>
 	<span class="text-label">
-		<span>{$label gedocumentos_egresos_consumo do_dep }</span>
+		<span>{$label gedocumentos_egresos_consumo resolfecha }</span>
 			</span>
 	</span>
-{END do_dep_fieldheadercolumn}
+{END resolfecha_fieldheadercolumn}
 
 	
 	</th>
-	{END cellblock_grid_headcell_field7}
-									{BEGIN cellblock_grid_headcell_field8}
+	{END cellblock_grid_headcell_field9}
+									{BEGIN cellblock_grid_headcell_field10}
 	<th
 	
-	{$cell_grid_headcell_field8}
+	{$cell_grid_headcell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
-			data-field="do_depsup"
+			data-field="resolnum"
 	
-	data-cellId="grid_headcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	data-cellId="grid_headcell_field10" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_depsup_fieldheadercolumn}
+		{BEGIN resolnum_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_depsup" data-fieldname="do_depsup" 
+	data-itemtype="grid_field_label" data-itemid="grid_field_label1" {$item_grid_field_label1} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" 
 
 	
 	
 	>
 	<span class="text-label">
-		<span>{$label gedocumentos_egresos_consumo do_depsup }</span>
+		<span>{$label gedocumentos_egresos_consumo resolnum }</span>
 			</span>
 	</span>
-{END do_depsup_fieldheadercolumn}
+{END resolnum_fieldheadercolumn}
 
 	
 	</th>
-	{END cellblock_grid_headcell_field8}
+	{END cellblock_grid_headcell_field10}
 							</tr>
 															
 					{END grid_header}
@@ -540,48 +540,48 @@
 {END do_concepto_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field6}
-									{BEGIN cellblock_grid_cell_field7}
+									{BEGIN cellblock_grid_cell_field9}
 	<td
 	
-	{$cell_grid_cell_field7}
+	{$cell_grid_cell_field9}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolfecha_class}	"
 
-			data-field="do_dep"
+			data-field="resolfecha"
 	
-	data-cellId="grid_cell_field7" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	data-cellId="grid_cell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_dep_fieldcolumn}
-<span data-itemtype="grid_field" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_dep" data-fieldname="do_dep" data-default-width >
-{$do_dep_value}
+		{BEGIN resolfecha_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="grid_field" {$item_grid_field} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" data-default-width >
+{$resolfecha_value}
 </span>
-{END do_dep_fieldcolumn}	
+{END resolfecha_fieldcolumn}	
 	</td>
-	{END cellblock_grid_cell_field7}
-									{BEGIN cellblock_grid_cell_field8}
+	{END cellblock_grid_cell_field9}
+									{BEGIN cellblock_grid_cell_field10}
 	<td
 	
-	{$cell_grid_cell_field8}
+	{$cell_grid_cell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
-			data-field="do_depsup"
+			data-field="resolnum"
 	
-	data-cellId="grid_cell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	data-cellId="grid_cell_field10" data-pageid="{$pageid}" data-record-id="{$recId}"	
 	>
 
 	 
-		{BEGIN do_depsup_fieldcolumn}
-<span data-itemtype="grid_field" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_depsup" data-fieldname="do_depsup" data-default-width >
-{$do_depsup_value}
+		{BEGIN resolnum_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="grid_field1" {$item_grid_field1} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" data-default-width >
+{$resolnum_value}
 </span>
-{END do_depsup_fieldcolumn}	
+{END resolnum_fieldcolumn}	
 	</td>
-	{END cellblock_grid_cell_field8}
+	{END cellblock_grid_cell_field10}
 							</tr>
 										
 											</tbody>
@@ -698,36 +698,36 @@
 	
 	</td>
 	{END cellblock_grid_footcell_field6}
-									{BEGIN cellblock_grid_footcell_field7}
+									{BEGIN cellblock_grid_footcell_field9}
 	<td
 	
-	{$cell_grid_footcell_field7}
+	{$cell_grid_footcell_field9}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_dep_class}	"
+		 r-ori-vert		 {$resolfecha_class}	"
 
 	
-	data-cellId="grid_footcell_field7" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_print"	
+	data-cellId="grid_footcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_print"	
 	>
 
 	
 	</td>
-	{END cellblock_grid_footcell_field7}
-									{BEGIN cellblock_grid_footcell_field8}
+	{END cellblock_grid_footcell_field9}
+									{BEGIN cellblock_grid_footcell_field10}
 	<td
 	
-	{$cell_grid_footcell_field8}
+	{$cell_grid_footcell_field10}
 	{$recordattrs}
 	class="
-		 r-ori-vert		 {$do_depsup_class}	"
+		 r-ori-vert		 {$resolnum_class}	"
 
 	
-	data-cellId="grid_footcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_print"	
+	data-cellId="grid_footcell_field10" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_print"	
 	>
 
 	
 	</td>
-	{END cellblock_grid_footcell_field8}
+	{END cellblock_grid_footcell_field10}
 							</tr>
 					
 					</tfoot>
