--- a/templates/gedocumentos_egresos_consumo_view.htm
+++ b/templates/gedocumentos_egresos_consumo_view.htm
@@ -86,33 +86,25 @@
 	{$cell_grid_c5}
 	class=" r-ori-vert"
 	
-			data-single
 			
 			data-cellId="grid_c5" data-pageid="{$pageid}"
 		data-v-cell="2"
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN as_nroasiento_fk_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_as_nroasiento_fk}  r-vertical-field" data-fieldname="as_nroasiento_fk" data-signal-error-for="as_nroasiento_fk{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field" {$item_integrated_edit_field} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" data-compact >
-
-		<div class="col-md-12">
-	
-	<label class="" for="{$labelfor_as_nroasiento_fk}">
-		
-		{BEGIN as_nroasiento_fk_label}{$label gedocumentos_egresos_consumo as_nroasiento_fk }{END as_nroasiento_fk_label}
-	</label>
-	<div class="" >
+				{BEGIN as_nroasiento_fk_fieldblock}
+	<label class="control-label r-view-label" data-itemtype="edit_field_label" data-itemid="edit_field_label" {$item_edit_field_label} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" data-before-same-field data-compact>{BEGIN as_nroasiento_fk_label}{$label gedocumentos_egresos_consumo as_nroasiento_fk }{END as_nroasiento_fk_label}</label>
+{END as_nroasiento_fk_fieldblock}
+											{BEGIN as_nroasiento_fk_fieldblock}
+	<div class="r-view-field" data-itemtype="edit_field" data-itemid="integrated_edit_field" {$item_integrated_edit_field} data-pageid="{$pageid}" data-page="gedocumentos_egresos_consumo_view" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" data-before-same-field data-compact >
 		{$as_nroasiento_fk_value}	</div>
-
+{END as_nroasiento_fk_fieldblock}
+											{BEGIN as_nroasiento_fk_fieldblock}
+	<div class="r-edit-tooltip" data-signal-error-for="as_nroasiento_fk{$id}" data-itemtype="edit_field_tooltip" data-itemid="edit_field_tooltip" {$item_edit_field_tooltip} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" >
+		<div data-helpfor="as_nroasiento_fk" {$tooltipAttr gedocumentos_egresos_consumo as_nroasiento_fk } >
+			<div class="text-muted">{$tooltip gedocumentos_egresos_consumo as_nroasiento_fk }</div>
 		</div>
-		
-</div>
-
-
+	</div>
 {END as_nroasiento_fk_fieldblock}
 	
 								</td>
@@ -164,33 +156,25 @@
 	{$cell_grid_c7}
 	class=" r-ori-vert"
 	
-			data-single
 			
 			data-cellId="grid_c7" data-pageid="{$pageid}"
 		data-v-cell="2"
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_nrodoc_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_nrodoc}  r-vertical-field" data-fieldname="do_nrodoc" data-signal-error-for="do_nrodoc{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field5" {$item_integrated_edit_field5} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" data-compact >
-
-		<div class="col-md-12">
-	
-	<label class="" for="{$labelfor_do_nrodoc}">
-		
-		{BEGIN do_nrodoc_label}{$label gedocumentos_egresos_consumo do_nrodoc }{END do_nrodoc_label}
-	</label>
-	<div class="" >
+				{BEGIN do_nrodoc_fieldblock}
+	<label class="control-label r-view-label" data-itemtype="edit_field_label" data-itemid="edit_field_label1" {$item_edit_field_label1} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" data-before-same-field data-compact>{BEGIN do_nrodoc_label}{$label gedocumentos_egresos_consumo do_nrodoc }{END do_nrodoc_label}</label>
+{END do_nrodoc_fieldblock}
+											{BEGIN do_nrodoc_fieldblock}
+	<div class="r-view-field" data-itemtype="edit_field" data-itemid="integrated_edit_field5" {$item_integrated_edit_field5} data-pageid="{$pageid}" data-page="gedocumentos_egresos_consumo_view" data-field="do_nrodoc" data-fieldname="do_nrodoc" data-before-same-field data-compact >
 		{$do_nrodoc_value}	</div>
-
+{END do_nrodoc_fieldblock}
+											{BEGIN do_nrodoc_fieldblock}
+	<div class="r-edit-tooltip" data-signal-error-for="do_nrodoc{$id}" data-itemtype="edit_field_tooltip" data-itemid="edit_field_tooltip1" {$item_edit_field_tooltip1} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" >
+		<div data-helpfor="do_nrodoc" {$tooltipAttr gedocumentos_egresos_consumo do_nrodoc } >
+			<div class="text-muted">{$tooltip gedocumentos_egresos_consumo do_nrodoc }</div>
 		</div>
-		
-</div>
-
-
+	</div>
 {END do_nrodoc_fieldblock}
 	
 								</td>
@@ -321,6 +305,126 @@
 														<tr {$row_grid_2} >
 										
 
+{BEGIN cellblock_grid_c17}
+<td
+	{$cell_grid_c17}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c17" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolnum_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolnum}  r-vertical-field" data-fieldname="resolnum" data-signal-error-for="resolnum{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field16" {$item_integrated_edit_field16} data-pageid="{$pageid}" data-field="resolnum" data-fieldname="resolnum" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_resolnum}">
+		
+		{BEGIN resolnum_label}{$label gedocumentos_egresos_consumo resolnum }{END resolnum_label}
+	</label>
+	<div class="" >
+		{$resolnum_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END resolnum_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c17}
+			 
+																
+
+{BEGIN cellblock_grid_c18}
+<td
+	{$cell_grid_c18}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c18" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolfecha_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolfecha}  r-vertical-field" data-fieldname="resolfecha" data-signal-error-for="resolfecha{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field15" {$item_integrated_edit_field15} data-pageid="{$pageid}" data-field="resolfecha" data-fieldname="resolfecha" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_resolfecha}">
+		
+		{BEGIN resolfecha_label}{$label gedocumentos_egresos_consumo resolfecha }{END resolfecha_label}
+	</label>
+	<div class="" >
+		{$resolfecha_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END resolfecha_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c18}
+			 
+																
+
+{BEGIN cellblock_grid_c19}
+<td
+	{$cell_grid_c19}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c19" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN sys_user_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" data-fieldname="sys_user" data-signal-error-for="sys_user{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_sys_user}">
+		
+		{BEGIN sys_user_label}{$label gedocumentos_egresos_consumo sys_user }{END sys_user_label}
+	</label>
+	<div class="" >
+		{$sys_user_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END sys_user_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c19}
+								</tr>
+	 
+	 
+														<tr {$row_grid_3} >
+										
+
 {BEGIN cellblock_grid_c9}
 <td
 	{$cell_grid_c9}
@@ -360,7 +464,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_3} >
+														<tr {$row_grid_4} >
 										
 
 {BEGIN cellblock_grid_c10}
@@ -480,7 +584,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_4} >
+														<tr {$row_grid_5} >
 										
 
 {BEGIN cellblock_grid_c14}
@@ -520,7 +624,8 @@
 								</td>
 			{END cellblock_grid_c14}
 			 
-																
+		
+							
 
 {BEGIN cellblock_grid_c15}
 <td
@@ -534,32 +639,11 @@
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_depsup_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_depsup}  r-vertical-field" data-fieldname="do_depsup" data-signal-error-for="do_depsup{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field13" {$item_integrated_edit_field13} data-pageid="{$pageid}" data-field="do_depsup" data-fieldname="do_depsup" data-compact >
-
-		<div class="col-md-12">
-	
-	<label class="" for="{$labelfor_do_depsup}">
-		
-		{BEGIN do_depsup_label}{$label gedocumentos_egresos_consumo do_depsup }{END do_depsup_label}
-	</label>
-	<div class="" >
-		{$do_depsup_value}	</div>
-
-		</div>
-		
-</div>
-
-
-{END do_depsup_fieldblock}
-	
-								</td>
+									</td>
 			{END cellblock_grid_c15}
 			 
-																
+		
+							
 
 {BEGIN cellblock_grid_c16}
 <td
@@ -573,34 +657,12 @@
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_dep_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_dep}  r-vertical-field" data-fieldname="do_dep" data-signal-error-for="do_dep{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field12" {$item_integrated_edit_field12} data-pageid="{$pageid}" data-field="do_dep" data-fieldname="do_dep" data-compact >
-
-		<div class="col-md-12">
-	
-	<label class="" for="{$labelfor_do_dep}">
-		
-		{BEGIN do_dep_label}{$label gedocumentos_egresos_consumo do_dep }{END do_dep_label}
-	</label>
-	<div class="" >
-		{$do_dep_value}	</div>
-
-		</div>
-		
-</div>
-
-
-{END do_dep_fieldblock}
-	
-								</td>
+									</td>
 			{END cellblock_grid_c16}
 								</tr>
 	 
 	 
-														<tr {$row_grid_5} >
+														<tr {$row_grid_6} >
 										
 
 {BEGIN cellblock_grid_c13}
@@ -639,84 +701,6 @@
 	
 								</td>
 			{END cellblock_grid_c13}
-								</tr>
-	 
-	 
-														<tr {$row_grid_6} >
-										
-
-{BEGIN cellblock_grid_c3}
-<td
-	{$cell_grid_c3}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c3" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-				
-{BEGIN sys_user_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" data-fieldname="sys_user" data-signal-error-for="sys_user{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" data-compact >
-
-		<div class="col-md-12">
-	
-	<label class="" for="{$labelfor_sys_user}">
-		
-		{BEGIN sys_user_label}{$label gedocumentos_egresos_consumo sys_user }{END sys_user_label}
-	</label>
-	<div class="" >
-		{$sys_user_value}	</div>
-
-		</div>
-		
-</div>
-
-
-{END sys_user_fieldblock}
-	
-								</td>
-			{END cellblock_grid_c3}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c4}
-<td
-	{$cell_grid_c4}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c4" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c4}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c}
-<td
-	{$cell_grid_c}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c}
 								</tr>
 			</tbody></table>
 {END grid_block}
