--- a/templates/gedocumentos_ingresos_consumo_edit.htm
+++ b/templates/gedocumentos_ingresos_consumo_edit.htm
@@ -362,34 +362,30 @@
 	{$cell_grid_c5}
 	class=" r-ori-vert"
 	
-			data-single
 			
 			data-cellId="grid_c5" data-pageid="{$pageid}"
 		data-v-cell="2"
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN as_nroasiento_fk_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_as_nroasiento_fk}  r-vertical-field" 
-	data-signal-error-for="as_nroasiento_fk{$id}" {$required_attr_as_nroasiento_fk}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field" {$item_integrated_edit_field} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_as_nroasiento_fk}">
-		{BEGIN as_nroasiento_fk_label}{$label gedocumentos_ingresos_consumo as_nroasiento_fk }{END as_nroasiento_fk_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$as_nroasiento_fk_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="as_nroasiento_fk" {$tooltipAttr gedocumentos_ingresos_consumo as_nroasiento_fk } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_ingresos_consumo as_nroasiento_fk }		</div>
+				{BEGIN as_nroasiento_fk_fieldblock}
+	<div class="r-edit-label" data-signal-error-for="as_nroasiento_fk{$id}" data-itemtype="edit_field_label" data-itemid="edit_field_label" {$item_edit_field_label} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" data-before-same-field {$required_attr_as_nroasiento_fk}>
+		<label class="r-edit-label control-label" for="{$labelfor_as_nroasiento_fk}">
+			{BEGIN as_nroasiento_fk_label}{$label gedocumentos_ingresos_consumo as_nroasiento_fk }{END as_nroasiento_fk_label}
+			<span class="icon-required"></span>
+		</label>
 	</div>
-</div>
-
-
+{END as_nroasiento_fk_fieldblock}
+											{BEGIN as_nroasiento_fk_fieldblock}
+	<div class="r-edit-field" data-signal-error-for="as_nroasiento_fk{$id}" data-itemtype="edit_field" data-itemid="integrated_edit_field" {$item_integrated_edit_field} data-pageid="{$pageid}" data-page="gedocumentos_ingresos_consumo_edit" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" data-before-same-field {$required_attr_as_nroasiento_fk}>
+		{$as_nroasiento_fk_editcontrol}	</div>
+{END as_nroasiento_fk_fieldblock}
+											{BEGIN as_nroasiento_fk_fieldblock}
+	<div class="r-edit-tooltip" data-signal-error-for="as_nroasiento_fk{$id}" data-itemtype="edit_field_tooltip" data-itemid="edit_field_tooltip" {$item_edit_field_tooltip} data-pageid="{$pageid}" data-field="as_nroasiento_fk" data-fieldname="as_nroasiento_fk" >
+		<div data-helpfor="as_nroasiento_fk" {$tooltipAttr gedocumentos_ingresos_consumo as_nroasiento_fk } >
+			<div class="text-muted">{$tooltip gedocumentos_ingresos_consumo as_nroasiento_fk }</div>
+		</div>
+	</div>
 {END as_nroasiento_fk_fieldblock}
 	
 								</td>
@@ -442,34 +438,30 @@
 	{$cell_grid_c7}
 	class=" r-ori-vert"
 	
-			data-single
 			
 			data-cellId="grid_c7" data-pageid="{$pageid}"
 		data-v-cell="2"
 		
 >
 	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_nrodoc_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_nrodoc}  r-vertical-field" 
-	data-signal-error-for="do_nrodoc{$id}" {$required_attr_do_nrodoc}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field5" {$item_integrated_edit_field5} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_nrodoc}">
-		{BEGIN do_nrodoc_label}{$label gedocumentos_ingresos_consumo do_nrodoc }{END do_nrodoc_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_nrodoc_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_nrodoc" {$tooltipAttr gedocumentos_ingresos_consumo do_nrodoc } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_ingresos_consumo do_nrodoc }		</div>
+				{BEGIN do_nrodoc_fieldblock}
+	<div class="r-edit-label" data-signal-error-for="do_nrodoc{$id}" data-itemtype="edit_field_label" data-itemid="edit_field_label1" {$item_edit_field_label1} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" data-before-same-field {$required_attr_do_nrodoc}>
+		<label class="r-edit-label control-label" for="{$labelfor_do_nrodoc}">
+			{BEGIN do_nrodoc_label}{$label gedocumentos_ingresos_consumo do_nrodoc }{END do_nrodoc_label}
+			<span class="icon-required"></span>
+		</label>
 	</div>
-</div>
-
-
+{END do_nrodoc_fieldblock}
+											{BEGIN do_nrodoc_fieldblock}
+	<div class="r-edit-field" data-signal-error-for="do_nrodoc{$id}" data-itemtype="edit_field" data-itemid="integrated_edit_field5" {$item_integrated_edit_field5} data-pageid="{$pageid}" data-page="gedocumentos_ingresos_consumo_edit" data-field="do_nrodoc" data-fieldname="do_nrodoc" data-before-same-field {$required_attr_do_nrodoc}>
+		{$do_nrodoc_editcontrol}	</div>
+{END do_nrodoc_fieldblock}
+											{BEGIN do_nrodoc_fieldblock}
+	<div class="r-edit-tooltip" data-signal-error-for="do_nrodoc{$id}" data-itemtype="edit_field_tooltip" data-itemid="edit_field_tooltip1" {$item_edit_field_tooltip1} data-pageid="{$pageid}" data-field="do_nrodoc" data-fieldname="do_nrodoc" >
+		<div data-helpfor="do_nrodoc" {$tooltipAttr gedocumentos_ingresos_consumo do_nrodoc } >
+			<div class="text-muted">{$tooltip gedocumentos_ingresos_consumo do_nrodoc }</div>
+		</div>
+	</div>
 {END do_nrodoc_fieldblock}
 	
 								</td>
@@ -603,6 +595,129 @@
 														<tr {$row_grid_2} >
 										
 
+{BEGIN cellblock_grid_c17}
+<td
+	{$cell_grid_c17}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c17" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolnum_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolnum}  r-vertical-field" 
+	data-signal-error-for="resolnum{$id}" {$required_attr_resolnum}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field16" {$item_integrated_edit_field16} data-pageid="{$pageid}" data-field="resolnum" data-fieldname="resolnum" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_resolnum}">
+		{BEGIN resolnum_label}{$label gedocumentos_ingresos_consumo resolnum }{END resolnum_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$resolnum_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="resolnum" {$tooltipAttr gedocumentos_ingresos_consumo resolnum } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_ingresos_consumo resolnum }		</div>
+	</div>
+</div>
+
+
+{END resolnum_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c17}
+			 
+																
+
+{BEGIN cellblock_grid_c18}
+<td
+	{$cell_grid_c18}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c18" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN resolfecha_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_resolfecha}  r-vertical-field" 
+	data-signal-error-for="resolfecha{$id}" {$required_attr_resolfecha}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field15" {$item_integrated_edit_field15} data-pageid="{$pageid}" data-field="resolfecha" data-fieldname="resolfecha" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_resolfecha}">
+		{BEGIN resolfecha_label}{$label gedocumentos_ingresos_consumo resolfecha }{END resolfecha_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$resolfecha_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="resolfecha" {$tooltipAttr gedocumentos_ingresos_consumo resolfecha } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_ingresos_consumo resolfecha }		</div>
+	</div>
+</div>
+
+
+{END resolfecha_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c18}
+			 
+																
+
+{BEGIN cellblock_grid_c19}
+<td
+	{$cell_grid_c19}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c19" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN sys_user_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" 
+	data-signal-error-for="sys_user{$id}" {$required_attr_sys_user}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_sys_user}">
+		{BEGIN sys_user_label}{$label gedocumentos_ingresos_consumo sys_user }{END sys_user_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$sys_user_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="sys_user" {$tooltipAttr gedocumentos_ingresos_consumo sys_user } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_ingresos_consumo sys_user }		</div>
+	</div>
+</div>
+
+
+{END sys_user_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c19}
+								</tr>
+	 
+	 
+														<tr {$row_grid_3} >
+										
+
 {BEGIN cellblock_grid_c9}
 <td
 	{$cell_grid_c9}
@@ -643,7 +758,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_3} >
+														<tr {$row_grid_4} >
 										
 
 {BEGIN cellblock_grid_c10}
@@ -766,7 +881,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_4} >
+														<tr {$row_grid_5} >
 										
 
 {BEGIN cellblock_grid_c14}
@@ -889,7 +1004,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_5} >
+														<tr {$row_grid_6} >
 										
 
 {BEGIN cellblock_grid_c13}
@@ -929,85 +1044,6 @@
 	
 								</td>
 			{END cellblock_grid_c13}
-								</tr>
-	 
-	 
-														<tr {$row_grid_6} >
-										
-
-{BEGIN cellblock_grid_c3}
-<td
-	{$cell_grid_c3}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c3" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-				
-{BEGIN sys_user_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_sys_user}  r-vertical-field" 
-	data-signal-error-for="sys_user{$id}" {$required_attr_sys_user}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field14" {$item_integrated_edit_field14} data-pageid="{$pageid}" data-field="sys_user" data-fieldname="sys_user" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_sys_user}">
-		{BEGIN sys_user_label}{$label gedocumentos_ingresos_consumo sys_user }{END sys_user_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$sys_user_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="sys_user" {$tooltipAttr gedocumentos_ingresos_consumo sys_user } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_ingresos_consumo sys_user }		</div>
-	</div>
-</div>
-
-
-{END sys_user_fieldblock}
-	
-								</td>
-			{END cellblock_grid_c3}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c4}
-<td
-	{$cell_grid_c4}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c4" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c4}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c}
-<td
-	{$cell_grid_c}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c}
 								</tr>
 			</tbody></table>
 {END grid_block}
